// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesPanel renders a ghost 1`] = `
Array [
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-ghost-properties-panel"
    >
      <div
        className="m-properties-panel__header-wrapper"
      >
        <div
          className="m-view-header"
        >
          <div
            className="m-view-header__title"
          >
            Vehicles
          </div>
          <button
            className="m-close-button m-close-button--x-large m-close-button--light"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
        <div
          className="m-properties-panel__header"
        >
          <div
            className="m-properties-panel__label"
          >
            <svg
              style={
                Object {
                  "height": 64,
                  "width": 64,
                }
              }
              viewBox="-32 -20 64 64"
            >
              <g
                className="m-vehicle-icon m-vehicle-icon--large ghost early-red"
              >
                <rect
                  className="m-vehicle-icon__label-background"
                  height={24}
                  rx={12}
                  ry={12}
                  width={64}
                  x={-32}
                  y={19}
                />
                <text
                  className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                  dominantBaseline="central"
                  textAnchor="middle"
                  x="0"
                  y={31}
                >
                  0123
                </text>
                <g
                  transform="scale(0.7) translate(-24,-23)"
                >
                  <path
                    className="m-vehicle-icon__ghost-highlight"
                    d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                    stroke-join="round"
                  />
                  <path
                    className="m-vehicle-icon__ghost-body"
                    d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                    stroke-join="round"
                  />
                </g>
                <text
                  className="m-vehicle-icon__variant"
                  dominantBaseline="alphabetic"
                  textAnchor="middle"
                  x={0}
                  y={8}
                >
                  X
                </text>
              </g>
            </svg>
          </div>
          <div
            className="m-properties-panel__variant"
          >
            <div
              className="m-properties-panel__inbound-outbound"
            >
              Outbound
            </div>
            <div
              className="m-route-variant-name"
            >
              <span
                className="m-route-variant-name__route-id"
              >
                39_X
              </span>
               headsign
            </div>
          </div>
          <div
            className="m-properties-panel__ping-container"
          />
        </div>
        <ul
          className="m-tabs__tab-list"
          role="tablist"
        >
          <li
            className="m-tabs__tab m-tabs__tab--selected"
          >
            <button
              aria-selected={true}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Status
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Run
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Block
            </button>
          </li>
        </ul>
      </div>
      <div
        className="m-tabs__tab-panel"
      >
        <div
          className="m-ghost-properties-panel__no-waiver-banner"
        >
          <div
            className="m-ghost-properties-panel__no-waiver-banner-header"
          >
            <span
              className="m-ghost-properties-panel__no-waiver-banner-alert-icon"
            >
              <svg
                className="c-icon-alert-circle"
                viewBox="-3 -3 54 54"
              >
                <g
                  className="c-icon-alert-circle--highlighted"
                >
                  <circle
                    className="c-icon-alert-circle__outline"
                    cx="24"
                    cy="24"
                    r="27"
                  />
                  <circle
                    className="c-icon-alert-circle__fill"
                    cx="24"
                    cy="24"
                    r="22.59"
                  />
                  <g
                    className="c-icon-alert-circle__exclamation-point"
                  >
                    <path
                      d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                    />
                    <path
                      d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <div
              className="m-ghost-properties-panel__no-waiver-banner-title"
            >
              Unknown Ghost Bus - No Dispatcher Note
            </div>
          </div>
          A ghost bus or dropped trip has been automatically detected on this route but no reason has been logged yet. Once a dispatcher generates a note, it will appear here.
        </div>
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  123-0123
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  <div
    aria-hidden={true}
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />,
]
`;

exports[`PropertiesPanel renders a vehicle 1`] = `
Array [
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-vehicle-properties-panel"
    >
      <div
        className="m-properties-panel__header-wrapper"
      >
        <div
          className="m-view-header"
        >
          <div
            className="m-view-header__title"
          >
            Vehicles
          </div>
          <button
            className="m-close-button m-close-button--x-large m-close-button--light"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
        <div
          className="m-properties-panel__header"
        >
          <div
            className="m-properties-panel__label"
          >
            <svg
              style={
                Object {
                  "height": 64,
                  "width": 64,
                }
              }
              viewBox="-32 -20 64 64"
            >
              <g
                className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
              >
                <rect
                  className="m-vehicle-icon__label-background"
                  height={24}
                  rx={12}
                  ry={12}
                  width={64}
                  x={-32}
                  y={19}
                />
                <text
                  className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                  dominantBaseline="central"
                  textAnchor="middle"
                  x="0"
                  y={31}
                >
                  1
                </text>
                <path
                  className="m-vehicle-icon__triangle"
                  d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                  transform="scale(1) rotate(0) translate(-24,-22)"
                />
                <text
                  className="m-vehicle-icon__variant"
                  dominantBaseline="alphabetic"
                  textAnchor="middle"
                  x={0}
                  y={14}
                >
                  X
                </text>
              </g>
            </svg>
          </div>
          <div
            className="m-properties-panel__variant"
          >
            <div
              className="m-properties-panel__inbound-outbound"
            >
              Outbound
            </div>
            <div
              className="m-route-variant-name"
            >
              <span
                className="m-route-variant-name__route-id"
              >
                39_X
              </span>
               Forest Hills
            </div>
            <div
              className="m-properties-panel__schedule-adherence on-time early-red"
            >
              <div
                className="m-properties-panel__schedule-adherence-status-icon"
              >
                <svg
                  height="10"
                  width="10"
                >
                  <circle
                    cx="5"
                    cy="5"
                    r="5"
                  />
                </svg>
              </div>
              <div
                className="m-properties-panel__schedule-adherence-status-string"
              >
                on time
              </div>
              <div
                className="m-properties-panel__schedule-adherence-label"
              >
                (0 min early)
              </div>
            </div>
          </div>
          <div
            className="m-properties-panel__ping-container"
          >
            <div
              className="m-properties-panel__last-gps-ping"
            >
              111s ago
            </div>
          </div>
        </div>
        <ul
          className="m-tabs__tab-list"
          role="tablist"
        >
          <li
            className="m-tabs__tab m-tabs__tab--selected"
          >
            <button
              aria-selected={true}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Status
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Run
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Block
            </button>
          </li>
        </ul>
      </div>
      <div
        className="m-tabs__tab-panel"
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  run-1
                </td>
              </tr>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Vehicle
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  v1-label
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--operator"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Operator
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  PATTI SMITH #op1
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--last-login"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Last Login
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  4 hr 3 min; 1:38 PM
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="m-vehicle-properties-panel__location"
        >
          <div
            className="m-vehicle-properties-panel__latlng"
          >
            <div
              className="m-vehicle-properties-panel__label"
            >
              Current Location
            </div>
            <a
              className="m-vehicle-properties-panel__link"
              href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
              rel="noreferrer"
              target="_blank"
            >
              Directions
            </a>
          </div>
          <div
            className="m-vehicle-properties-panel__next-stop"
          >
            <div
              className="m-vehicle-properties-panel__label"
            >
              Next Stop
            </div>
            <div
              className="m-vehicle-properties-panel__value"
            >
              Stop Name
            </div>
          </div>
          <div
            className="m-vehicle-properties-panel__map"
          >
            <div
              className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
            />
            <div
              className="m-vehicle-map"
              id="id-vehicle-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    aria-hidden={true}
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />,
]
`;
